# raccoonscript

./: .gitignore  CMakeLists.txt  README.md  SPECIFICATION.md  codegen.rac  for.rac  repro.rac  scope.rac  simple.rac  test_struct.rac  test_suite.rac  varTypes.rac
.github/workflows/: ci.yml
include/: AST.hpp  ASTPrinter.hpp  Codegen.hpp  Lexer.hpp  ModuleMetadata.hpp  Parser.hpp  Token.hpp
src/: ASTPrinter.cpp  Codegen.cpp  Lexer.cpp  ModuleMetadata.cpp  Parser.cpp  main.cpp
tests/: test_minimal.rac  test_struct.rac  test_suite.rac
tests/modules/: calculator.rac  data.rac  geometry.rac  math.rac  mixed.rac  run_module_tests.bat  run_module_tests.sh  test_calculator.rac  test_complex.rac  test_geometry.rac  test_math.rac  test_mixed.rac  test_multiple.rac  util.rac
tests/single/: basic_math.rac  boolean_logic.rac  char_string.rac  conditionals.rac  const_vars.rac  float_ops.rac  loops.rac  multiple_functions.rac  nested_structs.rac  pointer_arithmetic.rac  pointers.rac  shadowing.rac  struct_basic.rac  struct_pointers.rac  while_loop.rac
